--- a/index.html
+++ b/index.html
@@ -171,6 +171,9 @@
 			<h4>Conference Reviewing</h4>
 			<ul>
 			  <li><a href="https://icml.cc/">International Conference on Machine Learning (ICML)</a> </li>
+			  <li><a href="https://neurips.cc/">Annual Conference on Neural Information Processing Systems (NeurIPS)</a> </li>
+			  <li><a href="https://aaai.org/conference/aaai/aaai-25/">AAAI Conference on Artificial Intelligence (AAAI)</a> </li>
+			  <li><a href="https://eccv.ecva.net/">European Conference on Computer Vision (ECCV)</a> </li>
 			  <li><a href="https://2024.acmmm.org/">ACM International Conference on Multimedia (ACM MM)</a> </li>
 			  <li><a href="https://conferences.miccai.org/2022/en/">International Conference on Medical Image Computing and Computer Assisted Intervention (MICCAI)</a> </li>
 			  <li><a href="https://2023.ijcnn.org/">International Joint Conference on Neural Networks (IJCNN) </a>  </li>
