--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 				</div>
 				<div class="column-picture right">
 				  <h2>Xuming Ran</h2>
-				  <p>Research Engineer<br/>
-				    <a href="https://www.shlab.org.cn/">AI for Science</a><br/>
-				    <a href="https://www.shlab.org.cn/">Shanghai AI Laboratory</a><br/><br/></p>
+				  <p>Research staff & PhD <br/>
+				    <a href="https://www.shlab.org.cn/">NUS AI Institute  \& NUS Medicine  </a><br/>
+				    <a href="https://www.shlab.org.cn/">National University of Singapore</a><br/><br/></p>
 
 				  <p><a href="mailto:ranxuming@gmail.com">Email</a> &nbsp; &nbsp; | &nbsp; &nbsp; <a href="bio.html">Bio</a> &nbsp; &nbsp; | &nbsp; &nbsp; <a href="Xuming_CV.pdf">CV</a> &nbsp; &nbsp; | &nbsp; &nbsp; <a href="https://github.com/ranxuming/">GitHub</a>  &nbsp; &nbsp; | &nbsp; &nbsp; <a href="https://scholar.google.com/citations?user=oTZip-cAAAAJ&hl=zh-CN">Google Scholar</a> &nbsp; &nbsp; | &nbsp; &nbsp; <a href="https://www.researchgate.net/profile/Xuming-Ran">Research Gate</a> &nbsp; &nbsp; | &nbsp; &nbsp; <a href="blog.html">Blog</a> </p> <br/>
 				</div>  
