--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 				<div class="column-picture right">
 				  <h2>Xuming Ran</h2>
 				  <p>Research staff & PhD <br/>
-				    <a href="https://www.shlab.org.cn/">NUS AI Institute  \& NUS Medicine  </a><br/>
-				    <a href="https://www.shlab.org.cn/">National University of Singapore</a><br/><br/></p>
+				    <a href="https://ai.nus.edu.sg/">NUS AI Institute </a>  &  <a href="https://medicine.nus.edu.sg/">NUS Medicine School</a> <br/>
+				    <a href="https://nus.edu.sg/">National University of Singapore</a><br/><br/></p>
 
 				  <p><a href="mailto:ranxuming@gmail.com">Email</a> &nbsp; &nbsp; | &nbsp; &nbsp; <a href="bio.html">Bio</a> &nbsp; &nbsp; | &nbsp; &nbsp; <a href="Xuming_CV.pdf">CV</a> &nbsp; &nbsp; | &nbsp; &nbsp; <a href="https://github.com/ranxuming/">GitHub</a>  &nbsp; &nbsp; | &nbsp; &nbsp; <a href="https://scholar.google.com/citations?user=oTZip-cAAAAJ&hl=zh-CN">Google Scholar</a> &nbsp; &nbsp; | &nbsp; &nbsp; <a href="https://www.researchgate.net/profile/Xuming-Ran">Research Gate</a> &nbsp; &nbsp; | &nbsp; &nbsp; <a href="blog.html">Blog</a> </p> <br/>
 				</div>  
