--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				</div>
 				<div class="column-picture right">
 				  <h2>Xuming Ran</h2>
-				  <p>Research staff & PhD <br/>
+				  <p>Research staff <br/>
 				    <a href="https://ai.nus.edu.sg/">NUS AI Institute </a>  &  <a href="https://medicine.nus.edu.sg/">NUS Medicine School</a> <br/>
 				    <a href="https://nus.edu.sg/">National University of Singapore</a><br/><br/></p>
 
