--- a/index.html
+++ b/index.html
@@ -172,15 +172,13 @@
 			<ul>
 			  <li><a href="https://icml.cc/">International Conference on Machine Learning (ICML)</a> </li>
 			  <li><a href="https://neurips.cc/">Annual Conference on Neural Information Processing Systems (NeurIPS)</a> </li>
+			  <li><a href="https://iclr.cc/">International Conference on Learning Representations (ICLR)</a> </li>
 			  <li><a href="https://aaai.org/conference/aaai/aaai-25/">AAAI Conference on Artificial Intelligence (AAAI)</a> </li>
+			  <li><a href="https://cvpr.thecvf.com/"> IEEE / CVF Computer Vision and Pattern Recognition Conference (CVPR)</a> </li>
 			  <li><a href="https://eccv.ecva.net/">European Conference on Computer Vision (ECCV)</a> </li>
 			  <li><a href="https://2024.acmmm.org/">ACM International Conference on Multimedia (ACM MM)</a> </li>
 			  <li><a href="https://conferences.miccai.org/2022/en/">International Conference on Medical Image Computing and Computer Assisted Intervention (MICCAI)</a> </li>
 			  <li><a href="https://2023.ijcnn.org/">International Joint Conference on Neural Networks (IJCNN) </a>  </li>
-			  <li><a href="https://www.apnns.org/ICONIP2022//">International Conference on Neural Information Processing (ICONIP) </a>  </li>
-			  <li><a href="https://wcci2022.org/">IEEE World Congress on Computational Intelligence (WCCI)  </a>  </li>
-			  <li><a href="https://2023.fuzz-ieee.org/">IEEE International Conference on Fuzzy Systems (FUZZ-IEEE) </a>  </li>
-			  <li><a href="https://2023.ieee-cec.org/">IEEE Congress on Evolutionary Computation (CEC) </a> </li>
 			 </ul>
 			 <h4>Journal Reviewing</h4>
 			<ul>
