--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 	 		<div class="row">
 				<div class="column-picture left">
-		 			<img class="portrait" src="photo/xumingran">
+		 			<img class="portrait" src="photo/xumingran.png">
 				</div>
 				<div class="column-picture right">
 				  <h2>Xuming Ran</h2>
