--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 					<div class="column-picture left">
 						<img class="portrait" src="photo/project/Project10.MAE4Genome.png">
 					</div>
-					<p> <a href="#project:1"><b>[Paper]</b></a>   The detection of human genomic structural variants (SVs) is essential for studying genetic evolution and disease progression. Recent advances in long-read sequencing technologies have greatly facilitate SV detection, and the rich SV features derived from long reads even enabled complex SV discovery.
+					<p> The detection of human genomic structural variants (SVs) is essential for studying genetic evolution and disease progression. Recent advances in long-read sequencing technologies have greatly facilitate SV detection, and the rich SV features derived from long reads even enabled complex SV discovery.
 						To get better performance for SV detection, we developed GeneMAE to detect SVs from long reads. 
 						Inspired by multi-modal learning, here we convert the detection of SVs into a targeted multi-object recognition task, using two modalities of images to represent the SV feature sequences and a deep neural network to detect different types of SVs from the modalities. 
 						Specifically, the multi-modal framework leverages two distinct modalities of SV: SVision and Cue. We demonstrate that GeneMAE can exploit the information sharing between modalities to capture more features of SVs and achieve higher accuracy for both simple and complex SVs. 
@@ -141,7 +141,6 @@
 			<h2></h2>
 			<h3> Publications</h3>
 			    <ol list-style-type: lower-roman>
-                  <li id= "project:1" ><b>Xuming Ran </b>, Honliang Yan, Jiadong Lin, Songbo Wang, Lei Bai, Wanli Ouyang,  Self-supervised deep learning encodes multi-modalities features of genome sequence for detecting complex structural variants, Submit to:  <i>  Nature Machine Intelligence</i> , 2023.</li>
                   <li id= "project:2"><b>Xuming Ran</b>, Jie Zhang, Ziyuan Ye, Haiyan Wu, Qi Xu, Huihui Zhou, and Quanying Liu. <a href="https://arxiv.org/abs/2111.15309">A computational framework to unify representation similarity and function in biological and artificial neural networks.</a> Under Review (Rivsion 1) at: <i> IEEE Transactions on Pattern Analysis and Machine Intelligence</i>, 2022.</li>
                   <li><b>Xuming Ran</b>, Mingkun Xu, Qi Xu, Huihui Zhou, and Quanying Liu. <a href="https://arxiv.org/abs/2010.01819">Bigeminal Priors Variational auto-encoder.</a> arXiv preprint arXiv:2010.01819, 2020.</li>
                   <li><b>Xuming Ran</b>, Mingkun Xu, Lingrui Mei, Qi Xu, and Quanying Liu. <a href="https://www.sciencedirect.com/science/article/abs/pii/S0893608021004111">Detecting out-of-distribution samples via variational auto-encoder with reliable uncertainty estimation</a> <i>Neural Networks</i>, 2021.</li>
